Tesis update Nov 12 2016

--- a/Tesis.bib
+++ b/Tesis.bib
@@ -127,3 +127,13 @@
   publisher="Foundation for Open Access Statistics"
 }
 
+%Reference on finite differences
+
+@book{thomas2013numerical,
+  title={Numerical partial differential equations: finite difference methods},
+  author={Thomas, James William},
+  volume={22},
+  year={2013},
+  publisher={Springer Science \& Business Media}
+}
+
