Advances thesis sunday 13 nov

--- a/Tesis.tex
+++ b/Tesis.tex
@@ -736,8 +736,15 @@ the 10 points in the domain where the synthetic data were created (black dots in
 and use GPs to fill the missing information. Take into account that this process of `filling the blanks'
 has to be done in all of the 10 measurement points in the domain $\Omega$ of definition of the phyiscal model.
 
-\textbf{Here show the experimental results from using GPs and shit like that}
+In Figure \ref{fignofitted} we can see the results from running the emulator (black dots) compared
+with the experimental measurement for each of the 10 sites (black line).
 
+\begin{figure}[H]
+\centering
+\includegraphics[scale=0.5]{./FigChap3/nofitted}
+\caption{whatever}
+\label{fignofitted}
+\end{figure}
 
 
 
