Tesis commit Dec 20 started Bambdad corrections chapter 2

--- a/Tesis.bib
+++ b/Tesis.bib
@@ -137,3 +137,13 @@
   publisher={Springer Science \& Business Media}
 }
 
+%Reference to dudley
+
+@book{dudley2002real,
+  title={Real analysis and probability},
+  author={Dudley, Richard M},
+  volume={74},
+  year={2002},
+  publisher={Cambridge University Press}
+}
+
