--- a/Tesis.bib
+++ b/Tesis.bib
@@ -147,3 +147,25 @@
   publisher={Cambridge University Press}
 }
 
+%Lebedev Book
+
+@book{lebedev2012functional,
+  title={Functional analysis: applications in mechanics and inverse problems},
+  author={Lebedev, Leonid P and Vorovich, Iosif I and Gladwell, Graham Maurice Leslie},
+  volume={41},
+  year={2012},
+  publisher={Springer Science \& Business Media}
+}
+
+%Arnold's book for the physics part
+
+@book{arnol2013mathematical,
+  title={Mathematical methods of classical mechanics},
+  author={Arnol'd, Vladimir Igorevich},
+  volume={60},
+  year={2013},
+  publisher={Springer Science \& Business Media}
+}
+
+  
+
